--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>gerz.github.io</title>
 </head>
 <body>
-<a href="fb.com/penetbater">Hello World...</a>
+<p>Hallo world!</p>
 </body>
 </html>
